# fast_api

./: .pre-commit-config.yaml  badminton_model.py  deps.py  fast_api.pyproj  fast_api.sln  main.py  models.py  pyproject.toml  security.py  test.py
.github/workflows/: main.yml
