[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Vadim Vikhrachev <vikhrachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest = "^8.3.5"
joblib = "^1.5.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
requests = "^2.32.3"
passlib = "^1.7.4"
jwt = "^1.3.1"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"
pyjwt = "^2.10.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
